Moved polarisation doc to Comp manual, as there are comps in it
git-svn-id: https://svn.mccode.org/svn/McStasTeX@195 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/mcstas.bib
+++ b/trunk/mcstas.bib
@@ -465,5 +465,12 @@
    year      = {1965},
    volume    = {7},
    pages     = {308-313}
+}
 
+@article{Mildner77,
+  author    = {D.F.R. Mildner and C.A. Pellizari and J.M. Carpenter},
+  journal   = {Acta. Cryst. A},
+  year      = {1977},
+  volume    = {33},
+  pages     = {954}
 }
