Keyword ENHANCE -> SPLIT
git-svn-id: https://svn.mccode.org/svn/McStasTeX@196 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/isotropic_sqw.tex
+++ b/trunk/isotropic_sqw.tex
@@ -17,7 +17,7 @@
 \end{figure}
 
 The sample component \emph{Isotropic\_Sqw} has been developed in order to simulate neutron scattering from any isotropic material such as liquids, glasses (amorphous systems), polymers and powders (currently, mono-crystals cannot be handled).
-The component \emph{Isotropic\_Sqw} treats coherent and incoherent neutron scattering and may be used to model most materials, including sample environments with concentric geometries.
+The component treats coherent and incoherent neutron scattering and may be used to model most materials, including sample environments with concentric geometries.
 The structure and dynamics of isotropic samples can be characterised by the dynamic structure factor $S(q,\omega)$, which determines the interaction between neutrons and the sample and therefore can be used as a probability distribution of $\omega$-energy and $q$-momentum transfers. It handles coherent and incoherent processes, both for elastic and inelastic interactions.
 The main input for the component is $S(q,\omega)$ tables, or powder structure files.
 
