--- a/trunk/running.tex
+++ b/trunk/running.tex
@@ -307,15 +307,17 @@ The \MCS\ team recommends these compiler alternatives for the Intel
 \item[\bf B]{\verb+icc+ or the Intel c compiler is available for Linux, Mac
     OS and Windows systems and is a commercial software
     product. Generally, simulations run with the Intel compiler are
-    {\bf a factor of 2 faster} than the identical simulation run using \verb+gcc+. To use \verb+icc+ with \MCS\, set the environment variables
+    {\bf a factor of 2 faster} than the identical simulation run using \verb+gcc+. To use \verb+icc+ with \MCS\ on Linux or Mac OS X, set the environment variables
     \begin{itemize}
       \item{\verb+MCSTAS_CC=icc+}
       \item{\verb+MCSTAS_CFLAGS="-g -O2 -wd177,266,1011,181"+}
     \end{itemize}
-    To use \verb+icc+ with MPI (see Section \ref{s:run-mpi})
+    To use \verb+icc+ with MPI on Unix system (see Section \ref{s:run-mpi})
  installations, it seems that \emph{editing}
     the mpicc shell script and setting the CC variable to "\verb+icc+" is the
     only requirement!}
+    On Windows, the Intel c compiler is 'icl', not 'icc' and has a dependency for Microsoft Visual C++. If you have both these softwares available, running McStas with the Intel compiler should be possible (currently untested by the McStas developer team).
+
 \end{itemize}
 
 
